Fix navigation on smaller screens

--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -4,5 +4,5 @@ $color-accent: $ubuntu-orange;
 $color-suru-start: #2c001e;
 $color-suru-middle: #772953;
 $color-suru-end: #e95420;
-$breakpoint-navigation-threshold: 600px;
+$breakpoint-navigation-threshold: 620px;
 $table-layout-fixed: false;
